# Luminol

./: .gitignore  CNAME  Cargo.toml  index.html  luminol.js
.cargo/: config.toml
assets/commands/XP/: 101.ron  111.ron
crates/command_parser/: Cargo.toml
crates/command_parser/src/: main.rs
crates/components/: Cargo.toml
crates/components/src/: map_view.rs  syntax_highlighting.rs  tilepicker.rs
crates/components/src/command_view/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: command_db.rs
crates/core/src/: data_cache.rs  lib.rs  project_manager.rs
crates/data/: Cargo.toml
crates/data/src/: commands.rs  lib.rs
crates/data/src/shared/: event.rs  mapinfo.rs
crates/egui-wgpu/src/: renderer.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: project.rs
crates/graphics/src/loaders/: atlas.rs  texture.rs
crates/plugins/: Cargo.toml  wit
crates/plugins/src/: lib.rs
crates/prism-sys/: README.md
crates/proc-macros/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/tabs/map/: brush.rs  mod.rs  util.rs
crates/ui/src/windows/: appearance.rs  common_event_edit.rs  config_window.rs  event_edit.rs  items.rs  map_picker.rs  script_edit.rs
events/: Conditional.ron  ShowText.ron
plugins/: README.md
plugins/rust_example/: Cargo.toml  build.sh
plugins/rust_example/src/: lib.rs
plugins/wit/: test.wit
src/: audio.rs  lib.rs  luminol.rs  main.rs
src/app/: mod.rs  top_bar.rs
src/components/tilemap/: generic_tilemap.rs
src/data/: commands.rs  data_cache.rs  nil_padded.rs  rgss_structs.rs  rmxp_structs.rs
src/filesystem/: filesystem_native.rs
src/tabs/: tab.rs
src/windows/: items.rs  tileset.rs
