[package]
name = "luminol-plugins"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasm-bridge = { version = "0.4.0", features = ["component-model"] }
slab.workspace = true
color-eyre.workspace = true

[lints]
workspace = true
